--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 
-Flask>=1.1.1
-numpy>=1.17.4
-pandas>=0.25.3
-scikit-learn>=0.21.3
-xgboost>=0.90
+Flask==1.0.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
+tensorflow==2.0.0
+Pillow>=5.4.0
+numpy==1.17.2
+scikit-learn==0.22.2
+pandas==0.25.1
 
